--- a/index.html
+++ b/index.html
@@ -358,12 +358,16 @@
                                         alt="...">
                                 </div>
                                 <div class="col">
-                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 70 2019"></div>
+                                    <div class="i18nelement fs-2 fw-bold" data-i18n="Toyota Camry 70 2019"></div>
+                                    <div class="fs-2 fw-bold">
+                                        <span>2019</span>
+                                        <span class="i18nelement" data-i18n="yearly"></span>
+                                    </div>
                                     <div class="py-2">
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Toyota Camry 70 2019.issued"></div>
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Toyota Camry 70 2019.price"></div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Toyota Camry 70 2019.issued">
+                                        </div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Toyota Camry 70 2019.price">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -378,12 +382,15 @@
                                         alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Lexus GX 470 2005"></div>
+                                    <div class="i18nelement fs-2 fw-bold" data-i18n="Lexus GX 470 2005"></div>
+                                    <div class="fs-2 fw-bold">
+                                        <span>2005</span>
+                                        <span class="i18nelement" data-i18n="yearly"></span>
+                                    </div>
                                     <div class="py-2">
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Lexus GX 470 2005.issued"></div>
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Lexus GX 470 2005.price"></div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Lexus GX 470 2005.issued">
+                                        </div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Lexus GX 470 2005.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -397,12 +404,16 @@
                                         alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Hyundai Sonata 2015"></div>
+                                    <div class="i18nelement fs-2 fw-bold" data-i18n="Hyundai Sonata 2015"></div>
+                                    <div class="fs-2 fw-bold">
+                                        <span>2015</span>
+                                        <span class="i18nelement" data-i18n="yearly"></span>
+                                    </div>
                                     <div class="py-2">
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Hyundai Sonata 2015.issued"></div>
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Hyundai Sonata 2015.price"></div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Hyundai Sonata 2015.issued">
+                                        </div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Hyundai Sonata 2015.price">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -417,6 +428,10 @@
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold" data-i18n="Mercedes-Benz E-Class 2010"></div>
+                                    <div class="fs-2 fw-bold">
+                                        <span>2010</span>
+                                        <span class="i18nelement" data-i18n="yearly"></span>
+                                    </div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
                                             data-i18n="Mercedes-Benz E-Class 2010.issued"></div>
@@ -435,12 +450,14 @@
                                         alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Honda CR-V 2010"></div>
+                                    <div class="i18nelement fs-2 fw-bold" data-i18n="Honda CR-V 2010"></div>
+                                    <div class="fs-2 fw-bold">
+                                        <span>2010</span>
+                                        <span class="i18nelement" data-i18n="yearly"></span>
+                                    </div>
                                     <div class="py-2">
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Honda CR-V 2010.issued"></div>
-                                        <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Honda CR-V 2010.price"></div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Honda CR-V 2010.issued"></div>
+                                        <div class="i18nelement fs-5 fw-bold" data-i18n="Honda CR-V 2010.price"></div>
                                     </div>
                                 </div>
                             </div>
