--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div>
                         <p class="i18nelement"
-                            data-i18n="Promotional loan without car repossession <b>at 11.9%</b> of 50 thousand soms for a period of 30 days">
+                            data-i18n="Promotional loan without car repossession <b>at 12.5%</b> of 50 thousand soms for a period of 30 days">
                         </p>
                     </div>
                     <div class="my-4 row cfs-13 text-center justify-content-start m-0 px-0 w-75">
@@ -119,7 +119,7 @@
                             <div class="col-lg-6 col-12 position-relative fw-bold px-0">
                                 <span class="i18nelement fs-5 position-absolute top-0 start-0"
                                     data-i18n="Your bid"></span>
-                                <span class="cfs-90" id="bid">11,9%</span>
+                                <span class="cfs-90" id="bid"></span>
                             </div>
                             <div class="my-4 row cfs-13 text-center justify-content-start m-0 px-0">
                                 <button
@@ -138,30 +138,34 @@
 
     <div class="block notification-block main-bg" id="notification-block">
         <div class="container">
-            <div class="row justify-content-center py-5">
-                <div class="col-12 col-lg-6 fw-bold">
-                    <div class="py-2">
-                        <label for="name" class="i18nelement form-label" data-i18n="How will they contact you?"></label>
-                        <input class="form-control cbg-grey border border-dark border-3 rounded-pill" type="text"
-                            id="name" placeholder="Асан Усон Усонович">
-                    </div>
-                    <div class="py-2">
-                        <label for="phone" class="i18nelement form-label" data-i18n="Enter your contact number"></label>
-                        <div class="input-group">
-                            <span
-                                class="input-group-text border-3 border border-dark border-end-0 rounded-pill rounded-end">+996</span>
-                            <input
-                                class="form-control cbg-grey border border-dark border-3 border-start-0 rounded-start rounded-pill"
-                                type="tel" id="phone" placeholder="__ __ __">
+            <form id="notification-form">
+                <div class="row justify-content-center py-5">
+                    <div class="col-12 col-lg-6 fw-bold">
+                        <div class="py-2">
+                            <label for="name" class="i18nelement form-label"
+                                data-i18n="How will they contact you?"></label>
+                            <input class="form-control cbg-grey border border-dark border-3 rounded-pill" type="text"
+                                id="name" placeholder="Асан Усон Усонович" required>
+                        </div>
+                        <div class="py-2">
+                            <label for="phone" class="i18nelement form-label"
+                                data-i18n="Enter your contact number"></label>
+                            <div class="input-group">
+                                <span
+                                    class="input-group-text border-3 border border-dark border-end-0 rounded-pill rounded-end">+996</span>
+                                <input
+                                    class="form-control cbg-grey border border-dark border-3 border-start-0 rounded-start rounded-pill"
+                                    type="tel" id="phone" placeholder="__ __ __" required>
+                            </div>
+                        </div>
+                        <div class="py-2 small fw-lighter">
+                            <input class="form-check-input bg-info" type="checkbox" id="checkData" required>
+                            <label for="checkData" class="i18nelement form-label"
+                                data-i18n="I agree to the processing of personal data"></label>
                         </div>
                     </div>
-                    <div class="py-2 small fw-lighter">
-                        <input class="form-check-input bg-info" type="checkbox" id="checkData">
-                        <label for="checkData" class="i18nelement form-label"
-                            data-i18n="I agree to the processing of personal data"></label>
-                    </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 
@@ -177,7 +181,7 @@
                             </div>
                             <div class="py-3">
                                 <button class="button green-button i18nelement border border-3 rounded-pill px-3 py-1"
-                                    data-i18n="Call me back" onclick="callMe()"></button>
+                                    data-i18n="Call me back" form="notification-form" type="submit"></button>
                             </div>
                         </div>
                     </div>
@@ -567,35 +571,37 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-lg-10">
-                            <div class="py-2">
-                                <label for="name1" class="i18nelement form-label"
-                                    data-i18n="How will they contact you?"></label>
-                                <input class="form-control cbg-grey border border-dark border-3 rounded-pill"
-                                    type="text" id="name1" placeholder="Асан Усон Усонович">
-                            </div>
-                            <div class="py-2">
-                                <label for="phone1" class="i18nelement form-label"
-                                    data-i18n="Enter your contact number"></label>
-                                <div class="input-group">
-                                    <span
-                                        class="input-group-text border-3 border border-dark border-end-0 rounded-pill rounded-end">+996</span>
-                                    <input
-                                        class="form-control cbg-grey border border-dark border-3 border-start-0 rounded-start rounded-pill"
-                                        type="tel" id="phone1" placeholder="__ __ __">
+                    <form id="notification-form2">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-lg-10">
+                                <div class="py-2">
+                                    <label for="name1" class="i18nelement form-label"
+                                        data-i18n="How will they contact you?"></label>
+                                    <input class="form-control cbg-grey border border-dark border-3 rounded-pill"
+                                        type="text" id="name1" placeholder="Асан Усон Усонович" required>
+                                </div>
+                                <div class="py-2">
+                                    <label for="phone1" class="i18nelement form-label"
+                                        data-i18n="Enter your contact number"></label>
+                                    <div class="input-group">
+                                        <span
+                                            class="input-group-text border-3 border border-dark border-end-0 rounded-pill rounded-end">+996</span>
+                                        <input
+                                            class="form-control cbg-grey border border-dark border-3 border-start-0 rounded-start rounded-pill"
+                                            type="tel" id="phone1" placeholder="__ __ __" required>
+                                    </div>
+                                </div>
+                                <div class="py-2 small fw-lighter">
+                                    <input class="form-check-input bg-info" type="checkbox" id="checkData1" required>
+                                    <label for="checkData1" class="i18nelement form-label fw-normal"
+                                        data-i18n="I agree to the processing of personal data"></label>
                                 </div>
                             </div>
-                            <div class="py-2 small fw-lighter">
-                                <input class="form-check-input bg-info" type="checkbox" id="checkData1">
-                                <label for="checkData1" class="i18nelement form-label fw-normal"
-                                    data-i18n="I agree to the processing of personal data"></label>
-                            </div>
+                            <button id="submit-button"
+                                class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2 i18nelement"
+                                data-i18n="Submit your application" disabled type="submit"></button>
                         </div>
-                        <button type="button" id="submit-button"
-                            class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2 i18nelement"
-                            data-i18n="Submit your application" disabled>Close</button>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
