--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid d-flex justify-content-center fw-bold">
-                    <img src="images/logo/logo.png" alt="">
+                    <img src="images/logo/LogoTulpar.png" alt="">
                     <a class="navbar-brand m-0 i18nelement p-1" href="#" data-i18n="Company name"></a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -514,12 +514,12 @@
             <div class="py-4">
                 <div class="i18nelement fs-2 fw-bold text-center" data-i18n="Contacts"></div>
                 <div class="row justify-content-around align-items-start">
-                    <div class="col-lg-2 col-12">
+                    <div class="col-lg-3 col-12">
                         <div class="i18nelement fs-4 fw-bold" data-i18n="Address"></div>
                         <div class="i18nelement fs-6 fw-normal"
                             data-i18n="Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)"></div>
                     </div>
-                    <div class="col-lg-2 col-12 text-lg-center">
+                    <div class="col-lg-3 col-12 text-lg-center">
                         <div class="i18nelement fs-4 fw-bold" data-i18n="Phone"></div>
                         <div class="fs-6 fw-normal">
                             <div>+996 502 308 333</div>
@@ -527,7 +527,7 @@
                             <div>tulpar-car@mail.ru</div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-12">
+                    <div class="col-lg-3 col-12">
                         <div class="i18nelement fs-4 fw-bold" data-i18n="Operating mode"></div>
                         <div>
                             <div class="i18nelement" data-i18n="date-1"></div>
@@ -544,7 +544,7 @@
         <div class="container d-flex">
             <div class="mx-auto text-center text-white py-2">
                 <div>
-                    <img src="images/logo/logo.png" alt="">
+                    <img src="images/logo/LogoTulpar.png" alt="">
                     <div class="i18nelement fw-bold " data-i18n="AUTO PAWNSHOP 'TULPAR'"></div>
                 </div>
                 <div class="py-3">
