--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <script src="/js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/simple_i18n/i18next.min.js"></script>
-    <script src="/simple_i18n/i18n.js" type="text/javascript"></script>
-    <script src="/js/smtp.js"></script>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
+    <script src="simple_i18n/i18next.min.js"></script>
+    <script src="simple_i18n/i18n.js" type="text/javascript"></script>
+    <script src="js/smtp.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid d-flex justify-content-center fw-bold">
-                    <img src="/images/logo/LogoTulpar.png" alt="">
+                    <img src="images/logo/LogoTulpar.png" alt="">
                     <a class="navbar-brand m-0 i18nelement p-1" href="#" data-i18n="Company name"></a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <img class="img-fluid" src="/images/bmw.png" alt="">
+                    <img class="img-fluid" src="images/bmw.png" alt="">
                 </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
                 <div class="col-12 col-lg-9">
                     <div class="i18nelement fs-1 fw-bold" data-i18n="Tulpar pawnshop"></div>
                     <div class="i18nelement fs-2 fw-normal" data-i18n="Loan from 50 thousand"></div>
-                    <img class="img-fluid" src="/images/carAndHouse.png" />
+                    <img class="img-fluid" src="images/carAndHouse.png" />
                 </div>
             </div>
         </div>
@@ -365,7 +365,7 @@
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
                                     <img class="img-fluid w-100 h-100"
-                                        src="/images/carusel/photo_2023-10-14_23-31-57.jpg" style="max-height: 500px;"
+                                        src="images/carusel/photo_2023-10-14_23-31-57.jpg" style="max-height: 500px;"
                                         alt="...">
                                 </div>
                                 <div class="col">
@@ -389,7 +389,7 @@
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
                                     <img class="img-fluid w-100 h-100"
-                                        src="/images/carusel/photo_2023-10-14_23-32-00.jpg" style="max-height: 500px;"
+                                        src="images/carusel/photo_2023-10-14_23-32-00.jpg" style="max-height: 500px;"
                                         alt="">
                                 </div>
                                 <div class="col">
@@ -411,7 +411,7 @@
                         <div class="py-5">
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="/images/carusel/photo_2023-10-14_23-32-04.jpg"
+                                    <img class="img-fluid w-100" src="images/carusel/photo_2023-10-14_23-32-04.jpg"
                                         alt="">
                                 </div>
                                 <div class="col">
@@ -434,7 +434,7 @@
                         <div class="py-5">
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="/images/carusel/photo_2023-10-14_23-32-06.jpg"
+                                    <img class="img-fluid w-100" src="images/carusel/photo_2023-10-14_23-32-06.jpg"
                                         alt="">
                                 </div>
                                 <div class="col">
@@ -457,7 +457,7 @@
                         <div class="py-5">
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="/images/carusel/photo_2023-10-14_23-32-10.jpg"
+                                    <img class="img-fluid w-100" src="images/carusel/photo_2023-10-14_23-32-10.jpg"
                                         alt="">
                                 </div>
                                 <div class="col">
@@ -560,7 +560,7 @@
         <div class="container d-flex">
             <div class="mx-auto text-center text-white py-2">
                 <div>
-                    <img src="/images/logo/LogoTulpar.png" alt="">
+                    <img src="images/logo/LogoTulpar.png" alt="">
                     <div class="i18nelement fw-bold " data-i18n="AUTO PAWNSHOP 'TULPAR'"></div>
                 </div>
                 <div class="py-3">
@@ -623,7 +623,7 @@
         </div>
     </div>
 
-    <script src="/js/script.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
