--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link i18nelement" data-i18n="Calculator" href="#calc-block"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link i18nelement" data-i18n="About company" href="#footer-block"></a>
+                                <a class="nav-link i18nelement" data-i18n="About company" href="#companyDesc"></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link i18nelement" data-i18n="Examples" href="#example-block"></a>
@@ -197,7 +197,7 @@
         </div>
     </div>
 
-    <div class="block ad-block main-bg">
+    <div class="block ad-block main-bg" id="companyDesc">
         <div class="container">
             <div class="row justify-content-center text-center py-3">
                 <div class="col-12 col-lg-9">
