--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div>
                         <p class="i18nelement"
-                            data-i18n="Promotional loan without car repossession <b>at 12.5%</b> of 50 thousand soms for a period of 30 days">
+                            data-i18n="Promotional loan without car repossession at 12.5% of 50 thousand soms for a period of 30 days">
                         </p>
                     </div>
                     <div class="my-4 row cfs-13 text-center justify-content-start m-0 px-0 w-75">
@@ -152,7 +152,7 @@
                             <label for="name" class="i18nelement form-label"
                                 data-i18n="How will they contact you?"></label>
                             <input class="form-control cbg-grey border border-dark border-3 rounded-pill" type="text"
-                                id="name" placeholder="Асан Усон Усонович" required>
+                                id="name" placeholder="Улан Бектуров" required>
                         </div>
                         <div class="py-2">
                             <label for="phone" class="i18nelement form-label"
@@ -594,7 +594,7 @@
                                     <label for="name1" class="i18nelement form-label"
                                         data-i18n="How will they contact you?"></label>
                                     <input class="form-control cbg-grey border border-dark border-3 rounded-pill"
-                                        type="text" id="name1" placeholder="Асан Усон Усонович" required>
+                                        type="text" id="name1" placeholder="Улан Бектуров" required>
                                 </div>
                                 <div class="py-2">
                                     <label for="phone1" class="i18nelement form-label"
