--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid d-flex justify-content-center fw-bold">
                     <img src="images/logo/LogoTulpar.png" alt="">
-                    <a class="navbar-brand m-0 i18nelement p-1" href="#" data-i18n="Company name"></a>
+                    <a class="navbar-brand m-0 i18nelement p-1 text-uppercase" href="#" data-i18n="Company name"></a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -561,7 +561,7 @@
             <div class="mx-auto text-center text-white py-2">
                 <div>
                     <img src="images/logo/LogoTulpar.png" alt="">
-                    <div class="i18nelement fw-bold " data-i18n="AUTO PAWNSHOP 'TULPAR'"></div>
+                    <div class="i18nelement fw-bold text-uppercase" data-i18n="AUTO PAWNSHOP 'TULPAR'"></div>
                 </div>
                 <div class="py-3">
                     <div class="i18nelement" data-i18n="Services provided by:"></div>
